my-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nginx-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007 # Fixed port for easy access
  selector:
    app: my-nginx
