my-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: myflix.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-nginx-service   # <--- Must match 'kubectl get svc'
            port:
              number: 80
  - host: bucks.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-bucks-service   # <--- Must match 'kubectl get svc'
            port:
              number: 80
